# csv2parquet

./: Cargo.toml  README.md
src/: main.rs
