[package]
name = "csv2parquet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parquet = "34.0.0"
arrow = "34.0.0"
arrow-schema = { version = "34.0.0", features = ["serde"] }
serde_json = "1.0.91"
clap = { version = "4.4.8", features = ["derive"] }